fixed margin and gap

--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -12,22 +12,6 @@
   gap: 70px;
 }
 
-.product_description {
-  flex-direction: column;
-  gap: 10px;
-}
-
-.product_details {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.product_description h4 {
-  border-bottom: 1px solid rgb(174, 159, 159);
-  margin: 10px 0;
-}
-
 .product_main_img {
   max-width: 600px;
 }
@@ -58,11 +42,22 @@
   border: 2px solid rgb(238, 35, 35);
 }
 
+.product_details {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.product_description h4 {
+  border-bottom: 1px solid rgb(174, 159, 159);
+  margin: 10px 0;
+}
+
 .product_quantity_add_to_cart {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-top: 50px;
+  margin-top: 40px;
 }
 
 .product_quantity {
@@ -126,7 +121,7 @@
 @media (max-width: 800px) {
   .product ,
   .product_description {
-    padding: 10px 15px;
+    padding: 10px 10px;
     margin: 30px 10px;
   }
 
